Updated colors and Correction to Checkbox Logic

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,28 +4,32 @@
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     tools:context="com.example.android.htmlquiz.MainActivity"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
         android:orientation="vertical">
+
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:fadingEdge="horizontal"
             android:text="@string/title"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/sp30"
+            android:textStyle="bold"
             tools:layout_margin="@dimen/dp16" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/sp16"
+            android:layout_margin="@dimen/dp8"
             android:text="@string/qone"
             android:textColor="@color/black"
             android:textSize="@dimen/sp16" />
@@ -39,21 +43,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/oneA"
-                android:textSize="@dimen/sp16"/>
+                android:textSize="@dimen/sp16"
+                android:layout_margin="@dimen/dp8"/>
 
             <RadioButton
                 android:id="@+id/oneB"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/oneB"
-                android:textSize="@dimen/sp16"/>
+                android:textSize="@dimen/sp16"
+                android:layout_margin="@dimen/dp8"/>
 
             <RadioButton
                 android:id="@+id/oneC"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/oneC"
-                android:textSize="@dimen/sp16"/>
+                android:textSize="@dimen/sp16"
+                android:layout_margin="@dimen/dp8"/>
 
         </RadioGroup>
 
@@ -61,7 +68,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/sp16"
+            android:layout_margin="@dimen/dp8"
             android:text="@string/qtwo"
             android:textColor="@color/black"
             android:textSize="@dimen/sp16" />
@@ -75,28 +82,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/twoA"
-                android:textSize="@dimen/sp16"/>
+                android:textSize="@dimen/sp16"
+                android:layout_margin="@dimen/dp8"/>
 
             <RadioButton
                 android:id="@+id/twoB"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/twoB"
-                android:textSize="@dimen/sp16"/>
+                android:textSize="@dimen/sp16"
+                android:layout_margin="@dimen/dp8"/>
 
             <RadioButton
                 android:id="@+id/twoC"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/twoC"
-                android:textSize="@dimen/sp16"/>
+                android:textSize="@dimen/sp16"
+                android:layout_margin="@dimen/dp8"/>
 
             <RadioButton
                 android:id="@+id/twoD"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/twoD"
-                android:textSize="@dimen/sp16"/>
+                android:textSize="@dimen/sp16"
+                android:layout_margin="@dimen/dp8"/>
 
         </RadioGroup>
 
@@ -104,26 +115,27 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/sp16"
             android:text="@string/qthree"
             android:textColor="@color/black"
-            android:textSize="@dimen/sp16" />
+            android:textSize="@dimen/sp16"
+            android:layout_margin="@dimen/dp8"/>
 
         <EditText
+            android:id="@+id/userThree"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/answer"
             android:textColor="@color/black"
-            android:id="@+id/userThree"/>
+            android:layout_margin="@dimen/dp8"/>
 
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/sp16"
+            android:layout_margin="@dimen/dp8"
             android:text="@string/qfour"
-            android:textSize="@dimen/sp16"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="@dimen/sp16" />
 
         <RadioGroup
             android:layout_width="wrap_content"
@@ -134,59 +146,78 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/fourA"
-                android:textSize="@dimen/sp16"/>
+                android:textSize="@dimen/sp16"
+                android:layout_margin="@dimen/dp8"/>
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/fourB"
-                android:textSize="@dimen/sp16"/>
+                android:textSize="@dimen/sp16"
+                android:layout_margin="@dimen/dp8"/>
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/fourC"
-                android:textSize="@dimen/sp16"/>
+                android:textSize="@dimen/sp16"
+                android:layout_margin="@dimen/dp8"/>
 
         </RadioGroup>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/sp16"
             android:text="@string/qfive"
+            android:textColor="@color/black"
             android:textSize="@dimen/sp16"
-            android:textColor="@color/black"/>
+            android:layout_margin="@dimen/dp8"/>
+
         <CheckBox
+            android:id="@+id/fiveA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/fiveA"
             android:textSize="@dimen/sp16"
-            android:id="@+id/fiveA"/>
+            android:layout_margin="@dimen/dp8"/>
+
         <CheckBox
+            android:id="@+id/fiveB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/fiveB"
-            android:textSize="@dimen/sp16"/>
+            android:textSize="@dimen/sp16"
+            android:layout_margin="@dimen/dp8"/>
+
         <CheckBox
+            android:id="@+id/fiveC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/fiveC"
-            android:textSize="@dimen/sp16"/>
+            android:textSize="@dimen/sp16"
+            android:layout_margin="@dimen/dp8"/>
+
         <CheckBox
+            android:id="@+id/fiveD"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/fiveD"
             android:textSize="@dimen/sp16"
-            android:id="@+id/fiveD"/>
+            android:layout_margin="@dimen/dp8"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:onClick="submitQuiz"
             android:text="@string/submitButton"
             android:textSize="@dimen/sp16"
-            android:layout_gravity="center_horizontal"
-            android:onClick="submitQuiz" />
+            android:background="@color/colorPrimaryDark"
+            android:textColor="@color/colorAccentTwo"
+            android:textStyle="bold"
+            android:layout_margin="@dimen/sp16"
+            android:padding="@dimen/dp16"
+            android:elevation="@dimen/dp32"/>
 
     </LinearLayout>
 </ScrollView>
