--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#E5DADA</color>
+    <color name="colorPrimaryDark">#002642</color>
+    <color name="colorAccent">#840032</color>
     <color name="black">#000000</color>
-    <color name="white">#ffffff</color>
+    <color name="colorAccentTwo">#E59500</color>
 </resources>
