--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,5 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="RegularStyle" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:textSize">@dimen/sp16</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:layout_margin">@dimen/dp8</item>
+
+
+    </style>
+
 
 </resources>
